tests/baselines/reference/labeledStatementDeclarationListInLoopNoCrash1(target=es2015).errors.txt
labeledStatementDeclarationListInLoopNoCrash1.ts(3,3): error TS1344: 'A label is not allowed here.
labeledStatementDeclarationListInLoopNoCrash1.ts(3,11): error TS1123: Variable declaration list cannot be empty.


==== labeledStatementDeclarationListInLoopNoCrash1.ts (2 errors) ====
    for (let x of []) {
      var v0 = x;
      foo: var;
      ~~~
!!! error TS1344: 'A label is not allowed here.
              
!!! error TS1123: Variable declaration list cannot be empty.
      (function() { return x + v0});
    }
    